resolve wrong file issue

--- a/vim/.ideavimrc
+++ b/vim/.ideavimrc
@@ -1,140 +1,77 @@
-" General Configs {{{
+"" -- Suggested options --
+" Don't use Ex mode, use Q for formatting.
+" map Q gq
 
-set encoding=utf-8
+
+"" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
+"" Map <leader>d to start debug
+"map <leader>d <Action>(Debug)
+
+"" Map \b to toggle the breakpoint on the current line
+"map \b <Action>(ToggleLineBreakpoint)
+
+
+" Find more examples here: https://jb.gg/share-ideavimrc
+
 set number relativenumber
 
-set termguicolors
-set background=dark
-
-set expandtab
-set tabstop=2
-set softtabstop=2
-set shiftwidth=2
+set incsearch
 set scrolloff=5
 
-set autoindent
-set smartindent
+set idearefactormode=keep
+set ideajoin
+set ideastatusicon=gray
 
-set mouse=a
-set noshowmode
+let mapleader=" "
 
-set foldmethod=marker
+inoremap kj <Esc>
 
-"}}}
+nmap <leader>w :w<CR>
+nmap <leader>q :wq<CR>
+nmap Q :q!<CR>
 
+nmap <leader>v :source ~\.ideavimrc<CR>
 
-" Keybindings {{{
+nmap <leader>s :set hlsearch!<CR>
+nnoremap <silent> <CR> :nohlsearch<CR><CR>
 
-" Essentials
-imap kj <Esc>
-map <Space> <Leader>
-nmap <Leader>v :source ~/.vimrc<CR>
+vmap <leader>y "+y
+vmap <leader>d "+d
+nmap <leader>y "+yy
+nmap <leader>p "+p
+nmap <leader>P "+P
 
-" Insert mode navigation
 imap <A-h> <C-o>h
 imap <A-j> <C-o>j
 imap <A-k> <C-o>k
 imap <A-l> <C-o>l
 
-" Search highlight
-nmap <Leader>s :set hlsearch!<CR>
-nmap <Silent> <CR> :nohlsearch<CR><CR>
+nmap <leader>- :split<CR>
+nmap <leader>\ :vsplit<CR>
 
-" Clipboard operations
-nmap <Leader>d "+d
-vmap <Leader>d "+d
-nmap <Leader>P "+P
-nmap <Leader>p "+p
-vmap <Leader>y "+y
-nmap <Leader>y "+yy
+nmap <S-h> <C-w>h
+nmap <S-j> <C-w>j
+nmap <S-k> <C-w>k
+nmap <S-l> <C-w>l
 
-" Save & quit
-nmap <Leader>w :w<CR>
-nmap <Leader>q :wq<CR>
-nmap <S-q> :q!<CR>
+nmap <leader>h <Action>(PreviousTab)
+nmap <leader>l <Action>(NextTab)
+nmap <leader>g <Action>(Generate)
+nmap <leader>r <Action>(RefactoringMenu)
+nmap ge <Action>(GotoNextError)
+nmap gE <Action>(GotoPreviousError)
+nmap gh <Action>(ShowErrorDescription)
+nmap <leader>d <Action>(QuickJavaDoc)
+nmap <leader>i <Action>(QuickImplementations)
+nmap <C-p> <Action>(ReformatCode)
+nmap <C-j> <Action>(ActivateTerminalToolWindow)
+nmap <leader><leader> <Action>(RunClass)
+nmap <leader>z <Action>(ToggleZenMode)
 
-" Split windows
-nmap <Leader>- :split<CR>
-nmap <Leader>\ :vsplit<CR>
+set surround
+set commentary
+set highlightedyank
+set multiple-cursors
+set NERDTree
 
-" Window navigation
-map <S-h> <C-w>h
-map <S-j> <C-w>j
-map <S-k> <C-w>k
-map <S-l> <C-w>l
-
-"}}}
-
-
-" Plugins {{{
-
-call plug#begin()
-
-" Plug '0robustus1/vim-tmux-conf'
-Plug 'ap/vim-css-color'
-Plug 'itchyny/lightline.vim'
-Plug 'jiangmiao/auto-pairs'
-Plug 'machakann/vim-highlightedyank'
-Plug 'mattn/emmet-vim'
-Plug 'mg979/vim-visual-multi'
-Plug 'mhinz/vim-startify'
-Plug 'yggdroot/indentline'
-Plug 'yuttie/comfortable-motion.vim'
-
-" NERDTree
-Plug 'preservim/nerdtree' |
-      \ Plug 'ryanoasis/vim-devicons' |
-      \ Plug 'tiagofumo/vim-nerdtree-syntax-highlight' |
-      \ Plug 'Xuyuanp/nerdtree-git-plugin'
-
-" tpope's
-Plug 'tpope/vim-sensible'
-" backspace, incsearch, listchars
-" scrolloff (1), autoread, runtime
-Plug 'tpope/vim-commentary'
-Plug 'tpope/vim-surround'
-
-" Themes
-Plug 'haishanh/night-owl.vim'
-Plug 'lifepillar/vim-gruvbox8'
-Plug 'ghifarit53/tokyonight-vim'
-
-call plug#end()
-
-"}}}
-
-
-" Plugin Configs {{{
-
-" Highlight plugins
-" autocmd FileType vim syntax keyword Function Plug
-
-" Emmet
-let g:user_emmet_leader_key="<A-e>"
-
-" Indentation line 
-let g:indentLine_fileTypeExclude=['help', 'nerdtree', 'startify']
-let g:indentLine_char=''
-let g:indentLine_leadingSpaceEnabled=1
-let g:indentLine_leadingSpaceChar='·'
-
-" NERDTree
 nmap <leader>f :NERDTreeToggle<CR>
-let g:NERDTreeGitStatusUseNerdFonts=1
-
-" Highlight current line in Startify 
-autocmd User Startified setlocal cursorline
-
-" Colorscheme & lightline
-let g:tokyonight_style='storm'
-" night, storm
-let g:tokyonight_enable_italic=1
-
-colorscheme tokyonight
-" night-owl, gruvbox8, gruvbox8_hard, gruvbox8_soft, tokyonight
-
-let g:lightline = {}
-let g:lightline.colorscheme='tokyonight'
-" nightowl, gruxbov8, tokyonight
-
-" }}}
